# BasicSoftwareDesignPatterns

./: BasicSoftwareDesignPatterns.cpp  BasicSoftwareDesignPatterns.h  CMakeLists.txt  README.md
